--- a/Css/Leon.css
+++ b/Css/Leon.css
@@ -146,6 +146,15 @@ body{
     height: calc(100vh - 64px);
     position: relative;
 }
+.Landing::before{
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background-color:rgb(0 0 0 / 40%);
+}
 .Landing .introtext{
     position: absolute;
     top: 50%;
@@ -163,7 +172,7 @@ body{
 .landing .introtext p{
     font-size: 19px;
     line-height: 1.8;
-
+    color: white;
   }
   /* end Landing Section */
   /* <!-- Start Features --> */
